updated projects and contact info

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <link rel="stylesheet" href="styles.css"> 
-  <title>Katie Stutts | Software Developer</title>
+  <title>Katie Stutts | software developer</title>
 </head>
 <body>
   <div class="container">
-    <h1>Katie Stutts</h1>
-    <h5><a href="mailto:stuttskl@gmail.com">stuttskl@gmail.com</a> | <a href="https://www.linkedin.com/in/stuttskl/">linkedin</a> | <a href="https://github.com/stuttskl">github</a></h5>
+    <h1>hi, i'm Katie! 👋🏽</h1>
+    <h5><a href="mailto:stuttskl@gmail.com">stuttskl@gmail.com</a> | <a href="https://www.linkedin.com/in/stuttskl/">linkedin</a> | <a href="https://github.com/stuttskl">github</a> | <a href="https://medium.com/@stuttskl">blog</a></h5>
     <p>
-      I am a Software Engineer based in Seattle, Washington. 
+      I am a Software Developer based in Seattle, Washington. 
       As a woman in tech, my goal is to combine my passion for education, psychology and technology 
       and contribute to a world that is working to make education more accessible to diverse 
       populations, in non-traditional mediums and tech-supported platforms. When I'm not coding, 
@@ -25,15 +25,16 @@
     <p>database: mysql, mongodb, mongoose</p>
     <p>tools: git, aws s3, babel, webpack</p>
     <h2>projects</h2>
-    <p><a href="https://github.com/stuttskl/ayib">A Year In Books</a> - track your yearly reading goals and library</p>
-    <p><a href="https://github.com/stuttskl/stuttssh">stuttssh</a> - a mini implementation of a bash shell written in C </p>
+    <p><a href="https://github.com/stuttskl/ayib">a year in books</a> - track your yearly reading goals and library * mobile app companion coming soon! *</p>
+    <p><a href="https://github.com/stuttskl/stuttssh">stuttssh</a> - a mini shell implementation written in C that processes various UNIX commands and maintains background and foreground processes.</p>
+    <p><a href="https://github.com/stuttskl/iced-coffee-weather-app">weather roasters</a> - dynamic weather application that provides temperature-based alerts and a 7-day and hourly forecast</p>
+    <p><a href="https://github.com/stuttskl/Best-Boardgame-Browser">best boardgame browser</a> - full stack web app to seamlessly manage a collection of board games, players, and teams</p>
+    <p><a href="https://github.com/stuttskl/timeline-cardgame">timeline: the cardgame</a> - a c++ console game to test your knowledge of various trivia and historial events categories with timeline!</p>
     
     <h2>experience</h2>
     <p>Career Coach | <a href="https://flatironschool.com/">The Flatiron School</a> | October 2019 - Present</p>
-  
 
     <p>Computer Science Teaching Assistant | <a href="https://oregonstate.edu/">Oregon State University</a> | September 2019 - Present</p>
-    
 
     <p>Career Services Manager | <a href="https://www.galvanize.com/">Galvanize</a> | July 2018 - September 2019</p>
 
